--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -1,6 +1,6 @@
 .btn {
   background-color: $mainBlue;
-  color: #FFF;
+  color: #fff;
   text-decoration: none;
   padding: 1.2rem;
   display: inline-block;
@@ -11,8 +11,13 @@
   }
   
   &--large{
-    font-size: 1.25rem;
+    font-size: 1rem;
     padding: 1.1rem 1.9rem;
+    
+    @mixin atSmall {
+      font-size: 1.25rem;
+    }
+    
   }
   
 }
