--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -3,6 +3,7 @@
 @import "base/_variables";
 @import "base/_mixins";
 @import "modules/_btn";
+@import "modules/_headline";
 @import "modules/_large-hero";
 @import "modules/_page-section";
 @import "modules/_wrapper";
