Update Column Layout Block

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -6,4 +6,5 @@
 @import "modules/_headline";
 @import "modules/_large-hero";
 @import "modules/_page-section";
+@import "modules/_row";
 @import "modules/_wrapper";
