--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,3 +1,8 @@
+* {
+   box-sizing: border-box;
+}
+
+
 body {
   font-family: 'Roboto', sans-serif;
   color: #333;
@@ -6,3 +11,5 @@ body {
 img {
   max-width: 100%;
 }
+
+
