--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,13 +1,22 @@
 .wrapper {
   overflow: hidden;
-  padding-left: 28px;
-  padding-right: 28px;
-  max-width: 1200px;
+  padding-left: 18px;
+  padding-right: 18px;
+  max-width: 1236px;
   margin-left: auto;
   margin-right: auto;
   
   &--medium {
     max-width: 976px;
+  }
+  
+  &--b-margin {
+    
+    margin-bottom: 1rem;
+    
+    @mixin atSmall {
+      margin-bottom: 3.875rem;
+    }
   }
   
   .wrapper {
