--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -6,13 +6,23 @@
     margin-right: -65px;
   }
   
+  &--gutters-large {
+    margin-right: -100px;
+  }
+  
   &--gutters > div {
     padding-right: 65px;
+  }
+  
+  &--gutters-large > div {
+    padding-right: 100px;
   }
   
   &__b-margin-until-medium {
     margin-bottom: 1rem;
   }
+  
+  
   
   @mixin atMedium {
     
@@ -25,10 +35,15 @@
     width: 33.33%;
     }
     
-    &__medium4--larger{
+    &__medium-4--larger{
       width: 37%;
     }
   
+    &__medium-6 {
+      float: left;
+      width: 50%;
+    }
+    
     &__medium-8 {
     float: left;
     width: 66.66%;
