Complete Styling for Our Features Section

--- a/app/assets/styles/modules/_feature-item.css
+++ b/app/assets/styles/modules/_feature-item.css
@@ -1,16 +1,35 @@
 .feature-item {
-  position: relative;
-  padding-left: 5.875rem;
   padding-bottom: 2.5rem;
+  position: relative;
+  
+  
+  @mixin atSmall {
+  padding-left: 5.875rem;
+  }
+  
   
   &__icon {
-    position: absolute;
+    display: block;
+    margin: 0 auto;
+    
+    @mixin atSmall {
     left: 0;
+    position: absolute;
+    }
+    
   }
   
   &__title {
-    font-size: 1.875rem;
+    font-size: 1.6rem;
     font-weight: 300;
+    margin-top: .7em;
     margin-bottom: .8rem;
+    text-align: center;
+    
+    @mixin atSmall {
+    font-size: 1.875rem;
+    margin-top: 1em;
+    text-align: left;
+    }
   }
 }
