--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -11,6 +11,10 @@
     font-weight: 500;
   }
   
+  &--blue {
+    color: $mainBlue;
+  }
+  
   &__icon {
     display: block;
     margin-left: auto;
@@ -18,12 +22,13 @@
     margin-bottom: .6rem;
     
     @mixin atSmall {
+      position: relative;
+      top: 15px;
       display: inline-block;
       margin-left: 0;
       margin-right: 1.5rem;
       margin-bottom: 0;
       
-
     }
   }
 }
