--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -11,8 +11,27 @@
     max-width: 976px;
   }
   
-  &--b-margin {
+  &--no-padding-until-medium {
+    padding-left: 0px;
+    padding-right: 0px;
     
+    @mixin atMedium {
+      padding-left: 18px;
+      padding-right: 18px;
+    }
+  }
+  
+  &--no-padding-until-large {
+    padding-left: 0px;
+    padding-right: 0px;
+    
+    @mixin atLarge {
+      padding-left: 18px;
+      padding-right: 18px;
+    }
+  }
+  
+  &--b-margin {
     margin-bottom: 1rem;
     
     @mixin atSmall {
