Complete Styling for Footer

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -4,6 +4,7 @@
 @import "base/_global";
 @import "modules/_btn";
 @import "modules/_feature-item";
+@import "modules/_site-footer";
 @import "modules/_generic-content-container";
 @import "modules/_headline";
 @import "modules/_large-hero";
