Style Responsive Header and Footer

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -4,13 +4,15 @@
 @import "base/_global";
 @import "modules/_btn";
 @import "modules/_feature-item";
-@import "modules/_site-footer";
 @import "modules/_generic-content-container";
 @import "modules/_headline";
 @import "modules/_large-hero";
 @import "modules/_page-section";
+@import "modules/_primary-nav";
 @import "modules/_row";
 @import "modules/_section-title";
+@import "modules/_site-header";
+@import "modules/_site-footer";
 @import "modules/_sprite";
 @import "modules/_testimonial";
 @import "modules/_wrapper";
