--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -8,21 +8,26 @@
   
   &__text-content {
   left: 0;
+  padding-top: 65px;
   position: absolute;
   text-align: center;
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
+    
+    @mixin atMedium {
+      padding-top: 60px;
+    }
 }
   
   &__title {
   color: $mainBlue;  
-  font-size: 2.4rem;
+  font-size: 2.5rem;
   font-weight: 300;
   margin: 0;
     
     @mixin atLarge {
-      font-size: 4.8rem; 
+      font-size: 4.5rem; 
     }
 }
   
