Setup Mobile Menu Toggle

--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -38,6 +38,10 @@
     @mixin atMedium {
       display: block;
     }
+    
+    &--is-visible {
+      display: block;
+    }
   }
   
   &__menu-icon {
