--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,7 +1,16 @@
 .primary-nav {
   
+  padding-top: 10px;
+  
+  @mixin atMedium {
+    padding-top: 0;
+  }
+  
   &--pull-right {
-    float: right;
+    
+    @mixin atMedium {
+      float: right;
+    }
   }
   
   ul {
@@ -11,16 +20,39 @@
   }
   
   li {
-    float: left;
+    display: inline-block;
     list-style: none;
-    padding-right: 20px;
+    padding-right: 7px;
+    
+    @mixin atMedium {
+      float: left;
+      display: block;
+      padding-right: 20px;
+    }
+    
+    li:last-child {
+      padding-right: 0;
+      
+      @mixin atMedium {
+        padding-right: 20px;
+      }
+    }
   }
   
   a {
     color: #fff;
+    background-color: rgba($mainBlue, .5);
     display: block;
     font-weight: 300;
     text-decoration: none;
-    padding: 18px 0;
+    padding: 5px 10px;
+    font-size: 1rem;
+    
+    @mixin atMedium {
+      background-color: transparent;
+      font-size: 1rem;
+      padding: 18px 0;
+      
+    }
   }
 }
