--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -63,18 +63,65 @@
   }
   
   &__menu-icon {
-    background-color: #fff;
     position: absolute;
     height: 20px;
     width: 20px;
     right: 10px;
     top: 10px;
     
+    &::before {
+      content: "";
+      background-color: #fff;
+      position: absolute;
+      height: 3px;
+      width: 20px;
+      left: 0;
+      top: 0;
+      transform-origin: 0 0;
+      transition: transform .5s ease-out;
+    }
+    
+    &__middle {
+      background-color: #fff;
+      position: absolute;
+      height: 3px;
+      width: 20px;
+      left: 0;
+      top: 8px;
+      transition: all .5s ease-out;
+    }
+    
+    &::after {
+      content: "";
+      background-color: #fff;
+      position: absolute;
+      height: 3px;
+      width: 20px;
+      left: 0;
+      top: 16px;
+      transform-origin: 0 100%;
+      transition: transform .5s ease-out;
+    }
+    
     @mixin atMedium {
       display: none;
     }
   }
   
+  &__menu-icon--close-x {
+    &::before {
+      transform: rotate(45deg) scaleX(1.25);
+    }
+    
+    .site-header__menu-icon__middle {
+      opacity: 0;
+      transform: scaleX(0);
+    }
+    
+    &::after {
+      transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+    }
+  }
   
   
 }
