--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -10,7 +10,12 @@
   }
   
   @mixin atMedium {
+    position: fixed;
     background-color: rgba($mainBlue, .3);
+    
+    &--dark {
+      background-color: rgba(23, 51, 72, .85);
+    }
   }
   
   &__btn-container {
@@ -27,10 +32,19 @@
     top: 0;
     transform: translateX(-50%) scale(.75);
     transform-origin: 50% 0;
+    transition: transform .35s ease-out;
+    
+    
+    
+      
     
     @mixin atMedium {
       left: auto;
       transform: translateX(0);
+      
+      .site-header--dark & {
+        transform: scale(.69);
+      }
     }
   }
   
