Add Support for SVG Icons in Legacy Browsersclear

--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -129,7 +129,7 @@
     
     .site-header__menu-icon__middle {
       opacity: 0;
-      transform: scaleX(0);
+      width: 0;
     }
     
     &::after {
