Support for Flexbox Layout in Legacy Browsers

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -106,6 +106,7 @@
     }
     
     & > div {
+      float: none;
       display: flex;
     }
   }
@@ -121,15 +122,3 @@
   }
   
 }
-
-
-
-
-
-
-
-
-
-
-
-
